opam-version: "1.2"
name: "i3ipc"
version: "dev"
maintainer: "armael@isomorphis.me"
authors: [ "Armaël Guéneau" ]
license: "MIT"
homepage: "https://github.com/Armael/ocaml-i3ipc"
bug-reports: "https://github.com/Armael/ocaml-i3ipc/issues"
dev-repo: "https://github.com/Armael/ocaml-i3ipc"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "lwt"
  "dune" {build}
  "ppx_deriving_yojson"
  "result"
  "stdint"
  "base-bytes"
]
available: [ ocaml-version >= "4.02.0" ]
tags: [ "i3" "ipc" "window-manager" ]
