opam-version: "2.0"
name: "i3ipc"
version: "dev"
maintainer: "armael@isomorphis.me"
authors: [ "Armaël Guéneau" ]
license: "MIT"
homepage: "https://github.com/Armael/ocaml-i3ipc"
bug-reports: "https://github.com/Armael/ocaml-i3ipc/issues"
dev-repo: "https://github.com/Armael/ocaml-i3ipc"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc"] {with-doc}
]
depends: [
  "lwt"
  "lwt_ppx"
  "dune" {build}
  "odoc" {with-doc}
  "ppx_deriving_yojson"
  "result"
  "stdint"
  "base-bytes"
]
available: [ ocaml-version >= "4.02.0" ]
tags: [ "i3" "ipc" "window-manager" ]
synopsis: "A pure OCaml implementation of the i3 IPC protocol"
description: """
This library allows you to communicate with a running instance of i3, run
commands, query information about the state of the WM, and subscribe to events."""
