opam-version: "2.0"
name: "i3ipc"
version: "dev"
maintainer: "armael@isomorphis.me"
authors: [ "Armaël Guéneau" ]
license: "MIT"
homepage: "https://github.com/Armael/ocaml-i3ipc"
bug-reports: "https://github.com/Armael/ocaml-i3ipc/issues"
dev-repo: "https://github.com/Armael/ocaml-i3ipc"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc"] {with-doc}
]
depends: [
  "ocaml" {>= "4.03.0"}
  "lwt"
  "lwt_ppx"
  "dune" {>= "1.0"}
  "odoc" {with-doc}
  "ppx_deriving" {>= "4.2"}
  "ppx_deriving_yojson" {>= "3.2"}
  "result"
  "stdint"
]
tags: [ "i3" "ipc" "window-manager" ]
synopsis: "A pure OCaml implementation of the i3 IPC protocol"
description: """
This library allows you to communicate with a running instance of i3, run
commands, query information about the state of the WM, and subscribe to events."""
